[gd_scene load_steps=16 format=3 uid="uid://cvc32bmo5mjr0"]

[ext_resource type="Script" uid="uid://dgu3a1j7bvt10" path="res://Script/dune_room/niveau.gd" id="1_qyq3u"]
[ext_resource type="Script" uid="uid://b7dxpxoxh0f81" path="res://Script/dune_room/random_tick.gd" id="2_v6sxu"]
[ext_resource type="Texture2D" uid="uid://cnqu0686bxsjp" path="res://Asset/Visuel/dune_room/fond/Fond.png" id="3_rf4gf"]
[ext_resource type="Script" uid="uid://dqa3ffuwtt4kg" path="res://Script/dune_room/spawner_ver.gd" id="4_3dk3q"]
[ext_resource type="Script" uid="uid://ctnvhsdqdc7yo" path="res://Script/dune_room/paul/paul.gd" id="5_pa1yw"]
[ext_resource type="Script" uid="uid://dw2jabm4761oc" path="res://Script/dune_room/paul/paul_deplacements.gd" id="6_p6i6g"]
[ext_resource type="Texture2D" uid="uid://cx3xw2isneh0p" path="res://Asset/Visuel/dune_room/paul/paul_idle.png" id="7_bftq4"]
[ext_resource type="Texture2D" uid="uid://babf1qd5ugi3h" path="res://Asset/Visuel/dune_room/paul/walk/paul_walk1.png" id="8_b3ido"]
[ext_resource type="Texture2D" uid="uid://cbj1od6aan0tq" path="res://Asset/Visuel/dune_room/paul/walk/paul_walk3.png" id="9_gt8x0"]
[ext_resource type="Script" uid="uid://dme3wjkmr7uyi" path="res://Script/dune_room/paul/paul_anim.gd" id="10_7rpbn"]
[ext_resource type="Script" uid="uid://cc4s3ar1ax01t" path="res://Script/dune_room/paul/collecte.gd" id="11_r1j5t"]
[ext_resource type="Script" uid="uid://dxhxpwndvvuyy" path="res://Script/dune_room/compteur_epices.gd" id="12_erxjj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nyr1s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bftq4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_b3ido")
}, {
"duration": 1.0,
"texture": ExtResource("9_gt8x0")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eri5c"]
size = Vector2(32, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiuly"]
size = Vector2(78.5, 86)

[node name="Niveau" type="Node2D"]
script = ExtResource("1_qyq3u")

[node name="RandomTickGenerator" type="Timer" parent="."]
wait_time = 1.5
autostart = true
script = ExtResource("2_v6sxu")

[node name="Fond" type="Sprite2D" parent="."]
position = Vector2(225, 225)
texture = ExtResource("3_rf4gf")

[node name="SpawnerVer" type="Node2D" parent="." node_paths=PackedStringArray("random_tick_generator")]
position = Vector2(225, 225)
script = ExtResource("4_3dk3q")
random_tick_generator = NodePath("../RandomTickGenerator")
max_vers = 50

[node name="Paul" type="Node2D" parent="."]
position = Vector2(374, 117)
script = ExtResource("5_pa1yw")

[node name="deplacements" type="Node" parent="Paul"]
script = ExtResource("6_p6i6g")

[node name="sprite" type="AnimatedSprite2D" parent="Paul"]
z_index = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_nyr1s")
animation = &"move"
autoplay = "idle"
script = ExtResource("10_7rpbn")

[node name="Collision" type="Area2D" parent="Paul"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paul/Collision"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_eri5c")

[node name="Grease" type="Area2D" parent="Paul"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paul/Grease"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_aiuly")

[node name="Collecte" type="Node2D" parent="Paul"]
script = ExtResource("11_r1j5t")

[node name="CompteurEpices" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 301.0
offset_top = 9.0
offset_right = 442.0
offset_bottom = 50.0
bbcode_enabled = true
text = "[color=black]Epices : [/color]0"
script = ExtResource("12_erxjj")

[node name="Mort" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 80.0
offset_top = 205.0
offset_right = 370.0
offset_bottom = 252.0
bbcode_enabled = true
text = "[center][color=black]Paul est mort, appuyez sur R pour recommencer"

[connection signal="area_entered" from="Paul/Collision" to="Paul" method="_on_collision_area_entered"]
[connection signal="area_entered" from="Paul/Grease" to="Paul/Collecte" method="_on_grease_area_entered"]
[connection signal="area_exited" from="Paul/Grease" to="Paul/Collecte" method="_on_grease_area_exited"]
